<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StoryBuddies</string>
    <string name="add_story">Create your own!</string>
    <string name="action_settings">Settings</string>
    <string-array name="stories">
        <item >The Tortoise and the Hare</item>
        <item >Little Red Riding Hood</item>
    </string-array>
    <string name="CYOS_name_hint">Your Name</string>
    <string name="CYOS_by_text">By</string>
    <string name="CYOS_submit_text">Continue</string>
    <string name="CYOS_title_hint">Your Title</string>
    <string name="cyos_undo_text">Clear</string>
    <string name="cyos_input_story_prompt">Your Story Here</string>
    <string name="cyos_prev_button_text">Prev Page</string>
    <string name="cyos_submit_button_text">Submit</string>
    <string name="cyos_next_button_text">Next</string>
    <string-array name="tortoise_and_hare">
        <item >Once upon a time there was a slow tortoise and a speedy hare</item>
        <item >Hare liked to brag about his fast feet and Tortoise was tired of hearing him boast</item>
        <item >and so one day, Tortoise challenged Hare to a race</item>
        <item >All their animal friends came to watch and Tortoise and Hare were off!</item>
        <item >Hare zoomed down the road and he called back to Tortoise</item>
        <item >&quot;How will you win when you move so so slow?&quot; before he laughed and sprinted away</item>
        <item >Hare ran and ran and he was so far ahead that he thought to himself &quot;I have time for a nap&quot;</item>
        <item >so he hid behind a bush at the side of the road and drifted off to sleep</item>
        <item >All the while, Tortoise walked and walked</item>
        <item >he never ever stopped and soon, he had reached the finish line!</item>
        <item >all his animal friends cheered, yelling so loud that they woke Hare from his sleep</item>
        <item >Hare hurried back to the race track, but it was too late</item>
        <item >Tortoise had won! And so Hare learned a lesson that day</item>
        <item >&quot;Don't brag about your lightning pace, for slow and steady wins the race&quot;</item>
        
    </string-array>
    
    <string-array name="tortoise_and_hare_text">
        <item >Tortoise and Hare</item>
        <item >Hare was fast, Tortoise was slow</item>
        <item >They had a race</item>
        <item >All their animal friends came to watch and Tortoise and Hare were off!</item>
        <item >Hare zoomed down the road and he called back to Tortoise</item>
        <item >&quot;How will you win when you move so so slow?&quot; before he laughed and sprinted away</item>
        <item >Hare ran and ran and he was so far ahead that he thought to himself &quot;I have time for a nap&quot;</item>
        <item >so he hid behind a bush at the side of the road and drifted off to sleep</item>
        <item >All the while, Tortoise walked and walked</item>
        <item >he never ever stopped and soon, he had reached the finish line!</item>
        <item >all his animal friends cheered, yelling so loud that they woke Hare from his sleep</item>
        <item >Hare hurried back to the race track, but it was too late</item>
        <item >Tortoise had won! And so Hare learned a lesson that day</item>
        <item >&quot;Don't brag about your lightning pace, for slow and steady wins the race&quot;</item>
        
    </string-array>
    <string name="story_dir">StoryBuddies</string>
    <string name="text_file_name">text</string>
    <string name="cover_file_name">cover</string>
    <string name="page_file_name">page</string>
    <string name="tortoise_title">The Tortoise and the Hare</string>
    <string name="read_story">Would you like to read a story?</string>
    <string name="error_delete">Error deleting story</string>
    <string name="todo">TODO - Go to a title screen clone activity</string>
    <string name="error_save">Error saving story</string>
    <string name="error_speech">Error initializing speech engine</string>
    <string name="ready">Ready to play? Touch Play to begin</string>

</resources>
