<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation = "vertical" 
    android:background="@drawable/background">

    <EditText
        android:id="@+id/CYOS_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CYOS_Text_By"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/CYOS_name_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/CYOS_Text_By"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/CYOS_Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/CYOS_by_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/CYOS_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CYOS_Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/CYOS_submit_text" />

    <EditText
        android:id="@+id/CYOS_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CYOS_Name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/CYOS_title_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/micImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CYOS_submit_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:src="@android:drawable/ic_btn_speak_now" />

</RelativeLayout>
