<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<courses.cmsc436.storybuddies.PaintView
	    android:id="@+id/paintView"
	    android:layout_width="wrap_content"
	    android:layout_height="@dimen/cyos_paintview_height"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:background="#00FF00"
	    android:height="@dimen/cyos_paintview_height" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/paintView"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </RadioGroup>

        <Button
            android:id="@+id/undoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:text="@string/cyos_undo_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/cyosStoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/linearLayout1"
        android:ems="10"
        android:gravity="top|left"
        android:height="@dimen/cyos_textview_min_height"
        android:hint="@string/cyos_input_story_prompt"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/cyosStoryText" >

        <Button
            android:id="@+id/cyosPrevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cyos_prev_button_text" />

        <Button
            android:id="@+id/cyosSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cyos_submit_button_text" />

        <Button
            android:id="@+id/cyosNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cyos_next_button_text" />
    </LinearLayout>
</RelativeLayout>
